cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8.txt
../dataset/june2020_dataset_copy/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:65: error: (missing.creates.mustcall.for) $$ 3 $$ open $$ this $$ namedPipe $$ ( 2388, 2684 ) $$ Method open re-assigns the non-final, owning field this.namedPipe, but does not have a corresponding @CreatesMustCallFor annotation.
    public void open() throws IOException {
                ^
../dataset/june2020_dataset_copy/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/bll/NamedPipeGWCAConnection.java:67: error: (required.method.not.called) $$ 4 $$ method close $$ field namedPipe $$ java.io.RandomAccessFile $$  Non-final owning field might be overwritten $$ ( 2468, 2535 ) $$ @MustCall method close may not have been invoked on field namedPipe or any of its aliases.
            this.namedPipe = new RandomAccessFile(this.namedPipeLocation, "rw");
                           ^
  The type of object is: java.io.RandomAccessFile.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset_copy/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:40: error: (assignment) $$ 2 $$ @MustCall("close") NamedPipeGWCAConnection $$ @MustCall GWCAConnection $$ ( 1432, 1498 ) $$ incompatible types in assignment.
            gwcaConnection = new NamedPipeGWCAConnection(new File("\\\\.\\pipe\\GWCA_" + 4252));
                             ^
  found   : @MustCall("close") NamedPipeGWCAConnection
  required: @MustCall GWCAConnection
../dataset/june2020_dataset_copy/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java:40: error: (required.method.not.called) $$ 4 $$ method close $$ new NamedPipeGWCAConnection(new File("\\\\.\\pipe\\GWCA_" + 4252)) $$ be.demmel.fun.jgwcaconstants.bll.NamedPipeGWCAConnection $$ regular method exit $$ ( 1432, 1498 ) $$ @MustCall method close may not have been invoked on new NamedPipeGWCAConnection(new File("\\\\.\\pipe\\GWCA_" + 4252)) or any of its aliases.
            gwcaConnection = new NamedPipeGWCAConnection(new File("\\\\.\\pipe\\GWCA_" + 4252));
                             ^
  The type of object is: be.demmel.fun.jgwcaconstants.bll.NamedPipeGWCAConnection.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/Version.java:58: error: (required.method.not.called) $$ 4 $$ method close $$ stream $$ java.io.InputStream $$ regular method exit $$ ( 2128, 2193 ) $$ @MustCall method close may not have been invoked on stream or any of its aliases.
        InputStream stream = Version.class.getResourceAsStream(POM_PATH);
                    ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: regular method exit
Note: ../dataset/june2020_dataset_copy/url74c52881d6_AndrewBourgeois_JGWCAConstants_tgz-pJ8-be_demmel_fun_jgwcaconstants_Tutorial4J8/src/be/demmel/fun/jgwcaconstants/JCommander.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
5 errors
